<resources>
    <string name="app_name">STMob</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Logar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="error_invalid_email">Dados incorretos {Email}</string>
    <string name="error_invalid_password">Dados incorretos {Senha}</string>
    <string name="error_incorrect_password">Dados incorretos {Senha}</string>
    <string name="error_field_required">Dados incorretos {Email}</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_recupera_senha">RecuperaSenhaActivity</string>

    <string name="tipo_prompt">Tipo</string>
    <string-array name="tipo_array" >
        <item>Estudante</item>
        <item>Professor</item>
    </string-array>

    <string name="title_activity_buscar_atividades">buscarAtividades</string>
    <string name="title_activity_busca_atividade_resultado">buscaAtividadeResultado</string>
    <string name="title_activity_busca_atividadesnenhumretornto">BuscaAtividadesnenhumretornto
    </string>

    <string name="NomeParti">Nome Participante</string>
    <string name="EmailParti">Email Participante</string>
    <string name="btnBuscar">Buscar</string>
    <string name="ListarParticipante">Listar participante</string>
    <string name="cancelaInscr">Inscrição Cancelada com sucesso</string>
    <string name="btnVoltar">Voltar</string>
    <string name="atvPlaceholder">Nome Atividade</string>
    <string name="atvPales">Palestrante:</string>
    <string name="atvDescr">Descrição:</string>
    <string name="atvLocal">Local:</string>
    <string name="atvData">Data:</string>
    <string name="btnInscrever">Inscrição</string>
    <string name="btnCancelar">Cancelar <br/> Inscrição</string>
    <string name="btnShare">Compartilhar</string>
    <string name="btnPresenca"> Presença</string>
    <string name="result_succeeded">Retornado Com Sucesso!</string>
    <string name="result_failed">Resultado Com Erro!</string>
    <string name="result_failed_why">Por que algo aconteceu!</string>

    <string name="Inscrever"> Inscrever</string>
    <string name="title_activity_perfil">Meu Perfil</string>

    <string name="sim"> Sim</string>
    <string name="nao"> Não</string>

</resources>
