<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="191dp"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ListarParticipante"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:contextClickable="true"
        android:layout_weight="0.07" />

    <TextView
    android:id="@+id/txtNome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:text="@string/NomeParti" />

    <EditText
    android:id="@+id/edNomeParti"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:editable="false"
    android:enabled="false"
    android:ems="10"
    android:layout_marginLeft="10dp"
    android:inputType="text"
    tools:ignore="Deprecated" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textEmailParti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/EmailParti" />

    <EditText
        android:id="@+id/edEmailParti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:inputType="text" >

    </EditText>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:onClick="salvar"
        android:text="@string/btnBuscar" />
</LinearLayout>
